css/popup.css
body {
    background-color: rgb(0, 88, 163);
    background-image: url("dam_200.png");
    background-position: center top 150px;
    background-repeat: no-repeat;
    font-family: 'Open Sans', sans-serif;
    overflow-x: hidden;
    scrollbar-width: thin;
}

a {
    font-size: medium;
    color: snow;
    text-decoration: none;
    font-weight: 600;
    animation: noHoverAnim 0.4s linear;
}

a:hover {
    animation: hoverAnim 0.s linear;
    color: turquoise;
}

#titleholder {
    position: relative;
    width: 360px;
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#nextNoti {
    opacity: 0.7;
    position: absolute;
    color: white;
    text-decoration: underline;
    left: 10px;
    top: 0px;
    margin: 0;
    padding: 0;
}

#newsSection {
    position: relative;
}

#newsNoti {
    opacity: 0.7;
    position: absolute;
    color: white;
    text-decoration: underline;
    left: 10px;
    top: 0px;
    margin: 0;
    padding: 0;
}

h1 {
    margin: 0;
    font-size: large;
}

.title {
    text-align: center;
    color: whitesmoke;
    background: transparent;
    text-shadow: 2px 2px grey;
    padding-left: 10px;
    padding-right: 10px;
    background-color: #0058a3;
}

#nextCalendar {
    text-align: center;
    color: whitesmoke;
    background: transparent;
    padding-left: 5px;
    padding-right: 5px;
    width: 375px;
    background-color: #0058a3;
}

#nextCal {
    margin: 0px;
    padding: 0px;
    font-size: medium;
}

#nextTime {
    padding: 0px;
    font-size: normal;
}

#nextComment {
    word-wrap: break-word;
    padding: 0px;
    font-size: small;
}

#nextLink {
    padding: 0px;
    font-size: medium;
}
.linkholder h3{
    padding: 2px;
    margin: 0;
}
h3 {
    text-align: left;
    margin: 7px;
}

.link {
    font-size: 1.25rem;
}

.linkholder {
    background-color: rgba(0, 88, 163, 0.76);
    margin-top: 5px;
    display: flex;
    justify-content: space-around;
}

#toLunch {
    display: flex;
    justify-content: space-evenly;
    font-size: medium;
    color: white;
}

#content {
    display: flex;
    justify-content: center;
    text-align: center;
    align-items: center;
    font-style: italic;
    font-size: medium;
    color: white;
}

#food {
    display: none;
    margin: 10px 0px 10px 0px;
    width: 375px;
}

.lunchbutton {
    cursor: pointer;
    padding: 4px;
    border: 1px solid #226fbe;
    border-radius: 5px;
    animation: nolunchbuttonHover 0.3s linear;
}

.lunchbutton:hover {
    animation: lunchbuttonHover 0.3s linear;
    background-color: darkblue;
}

@keyframes lunchbuttonHover {
    0% {
        background-color: #0058a3;
    }
    100% {
        background-color: darkblue;
    }
}

@keyframes nolunchbuttonHover {
    0% {
        background-color: darkblue;
    }
    100% {
        background-color: #0058a3;
    }
}

.linkholder div {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: left;
}

.news {
    display: flex;
    flex-direction: column;
    align-items: center;
    font-size: medium;
    padding-top: 15px;
    color: white;
}

#today {
    font-size: normal;
    margin-right: 0;
}

.news h4 {
    margin: 0px;
    padding: 0px;
}

#latest {
    width: 360px;
    padding: 0;
    margin: 0;
    word-wrap: break-word;
    text-align: center;
}

#newsBody {
    width: 360px;
    word-wrap: break-word;
    margin: 5px;
    text-align: center;
}

.credits {
    text-align: center;
    color: grey;
}

.credits a {
    animation: none;
    color: darkgrey;
}

@keyframes hoverAnim {
    0% {
        color: snow;
    }
    100% {
        color: turquoise;
    }
}

@keyframes noHoverAnim {
    0% {
        color: turquoise;
    }
    100% {
        color: snow;
    }
}

